enabling server execution from maven commandline

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -46,6 +46,15 @@
                     </descriptorRefs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                  <mainClass>massim.Server</mainClass>
+                  <executable>java</executable>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
