fix main class in eismassim build

--- a/eismassim/pom.xml
+++ b/eismassim/pom.xml
@@ -38,7 +38,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>massim.javaagents.Main</mainClass>
+                            <mainClass>massim.eismassim.EnvironmentInterface</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
